# musxdom

./: .gitignore  .gitmodules  AGENTS.md  Arpeggio_8h_source.html  ArrowheadPresets_8h_source.html  BaseClasses_8h_source.html  CMakeLists.txt  CommonClasses_8h_source.html  DateTimeFormat_8h_source.html  Details_8h_source.html  DocumentElement_8h_source.html  DocumentFactory_8h_source.html  Document_8h_source.html  EnigmaString_8h_source.html  Entries_8h_source.html  EnumClasses_8h_source.html  FactoryBase_8h_source.html  FieldPopulatorsDetails_8h_source.html  FieldPopulatorsEntries_8h_source.html  FieldPopulatorsOptions_8h_source.html  FieldPopulatorsOthers_8h_source.html  FieldPopulatorsTexts_8h_source.html  Fraction_8h_source.html  Fundamentals_8h_source.html  Graphics_8h_source.html  HeaderFactory_8h_source.html  Header_8h_source.html  InstrumentUuids_8h_source.html  Instrument_8h_source.html  LICENSE  Layout_8h_source.html  Logger_8h_source.html  MusxInstance_8h_source.html  ObjectPool_8h_source.html  Options_8h_source.html  Ossia_8h_source.html  Others_8h_source.html  PercussionNoteType_8h_source.html  PoolFactory_8h_source.html  PseudoTieUtils_8h_source.html  (+1398 more)
.github/workflows/: build_and_test.yml  build_docs.yml
cmake/: GenerateFontMaps.cmake
docs/: Doxyfile
finale/: PercNoteTypes.txt
reference/: FinaleMaestroFontDefaultMac.musx  Maestro.FontDefaultWin.musx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+116 more)
src/music_theory/: music_theory.hpp  transposer.hpp  transposition.hpp
src/musx/: ScoreFileEncoder.h  musx.h  score_file_encoder.h
src/musx/dom/: BaseClasses.h  CommonClasses.cpp  CommonClasses.h  Details.cpp  Details.h  Document.cpp  Document.h  DocumentElement.h  DocumentView.h  Entries.cpp  Entries.h  EnumClasses.h  Fundamentals.h  Graphics.cpp  Graphics.h  Header.h  Implementations.cpp  Implementations.h  Instrument.cpp  Instrument.h  InstrumentUuids.h  MusxInstance.cpp  MusxInstance.h  ObjectList.h  ObjectPool.h  Options.cpp  Options.h  Ossia.cpp  Ossia.h  Others.cpp  Others.h  PercussionNoteType.cpp  PercussionNoteType.h  ShapeDesigner.cpp  ShapeDesigner.h  (+7 more)
tests/: CMakeLists.txt  clef_options_tests.cpp  document.cpp  document_tests.cpp  enclosure_tests.cpp  entries.cpp  expression_tests.cpp  fonts_tests.cpp  header.cpp  header_tests.cpp  musxdomtests.cpp  pool.cpp  pool_tests.cpp  test_utils.h  text_tests.cpp
tests/benchmarks/: CMakeLists.txt  bench_lookup.cpp
tests/data/: 1.enigmaxml  acci_inserts.enigmaxml  acci_inserts.musx  acci_smufl_inserts.enigmaxml  acci_smufl_inserts.musx  arpeggios.enigmaxml  arpeggios.musx  arrowheads.enigmaxml  arrowheads.musx  baselines.enigmaxml  baselines.musx  beam_invisibles.enigmaxml  beam_invisibles.musx  beam_mods.enigmaxml  beam_mods.musx  beam_over_graces.enigmaxml  beam_over_graces.musx  beam_stubs.enigmaxml  beam_stubs.musx  beamrests.enigmaxml  beamrests.musx  beams.enigmaxml  beams.musx  beams_over_barlines.enigmaxml  beams_over_barlines.musx  beams_primrests.enigmaxml  beams_primrests.musx  crazy_jumps.enigmaxml  crazy_jumps.musx  cross_staffs.enigmaxml  cross_staffs.musx  drumset.enigmaxml  drumset.musx  elapsed-dura.enigmaxml  elapsed-dura.musx  endings-indivpos.enigmaxml  endings-indivpos.musx  endingtext.enigmaxml  endingtext.musx  enharmonic_unlinked.enigmaxml  (+152 more)
tests/data/font_metadata/Finale Maestro/: Finale Maestro.json
tests/data/reference/: Finale Broadway Font Default.musx  Finale Jazz Font Default.enigmaxml  Finale Jazz Font Default.musx  FinaleMaestroFontDefaultMac.enigmaxml  Handwritten Default.musx  Jazz Font Default.enigmaxml  Jazz Font Default.musx  MaestroFontDefaultWin.enigmaxml  PattersonDefault.enigmaxml  PattersonDefault.musx  PattersonDefault.rotation-notes.md
tests/data/svg_ext_graphics/: elephant.enigmaxml  elephant.musx
tests/details/: baselines.cpp  beam_extensions.cpp  beam_stubs.cpp  chords.cpp  entry_details.cpp  floats.cpp  fretboards_diagrams.cpp  gfhold.cpp  lyrics.cpp  note_alters.cpp  secondary_beams.cpp  shape_note.cpp  staff_group.cpp  stems.cpp  tie_alter.cpp  tuplet_def.cpp  tuplet_defs.cpp
tests/dom/: document.cpp  document_graphics.cpp  header.cpp  pool.cpp
tests/entries/: beam_detection.cpp  cross_staffs.cpp  cues.cpp  entries.cpp  keysigs.cpp  part_voicing.cpp  tie_contours.cpp  ties.cpp
tests/music_theory/: transpose.cpp
tests/options/: accidental_options.cpp  alternate_notation_options.cpp  augementation_dot_options.cpp  barline_options.cpp  beam_options.cpp  chord_options.cpp  clef_options.cpp  flag_options.cpp  grace_note_options.cpp  key_signature_options.cpp  line_curve_options.cpp  lyric_options.cpp  misc_options.cpp  multimeasure_rest_options.cpp  music_spacing_options.cpp  music_symbol_options.cpp  note_rest_options.cpp  page_options.cpp  page_options_tests.cpp  piano_brace_bracket_options.cpp  repeat_options.cpp  repeat_options_tests.cpp  smart_shape_options.cpp  staff_options.cpp  stem_options.cpp  text_options.cpp  tie_options.cpp  time_signature_options.cpp  tuplet_options.cpp
tests/others/: articulation.cpp  beat_chart.cpp  enclosure.cpp  enclosure_tests.cpp  expression.cpp  expression_tests.cpp  fonts.cpp  fonts_tests.cpp  frame.cpp  fret_instrument.cpp  graphics.cpp  instrument_used.cpp  layer_attributes.cpp  measure.cpp  measure_number_region.cpp  miscellaneous.cpp  mmrest.cpp  multistaff_inst.cpp  ossia.cpp  page.cpp  part_definition.cpp  part_globals.cpp  part_voicing.cpp  percussion_notes.cpp  repeats.cpp  shape.cpp  smart_shape.cpp  staff.cpp  staff_style.cpp  staff_system.cpp  text.cpp  text_block.cpp
tests/util/: arpeggio.cpp  fraction.cpp  svg_arrowheads.cpp  svg_convert.cpp  svg_ext_graphics.cpp
(+51 files in other folders)
